added the countdown

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <div id="contener_button">
         <button id="button">start</button>
     </div>
+    
+    <script src="./script.js"></script>
 </body>
 </html>
