fexed things & added functions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/76d70cbe65.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -15,7 +16,8 @@
         <p id="timer"></p>
     </div>
     <div id="contener_button">
-        <button id="button">start</button>
+        <button id="start"><em class="fa-solid fa-play"></em></button>
+        <button id="reset"><em class="fa-solid fa-arrow-rotate-right"></em></button>
     </div>
     
     <script src="./script.js"></script>
