added decrease countdown

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
         <button id="start"><em class="fa-solid fa-play"></em></button>
         <button id="reset"><em class="fa-solid fa-arrow-rotate-right"></em></button>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
