--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
         <p id="pause_display">Pause</p>
     </div>
     <div id="contener_timer">
-        <p id="timer"></p>
+        <p id="timer">00:00</p>
     </div>
     <div id="contener_button">
         <button id="start"><em class="fa-solid fa-play"></em></button>
         <button id="reset"><em class="fa-solid fa-arrow-rotate-right"></em></button>
     </div>
 
+    <form id="form">
+        <label for="work_time">work time : </label>
+        <input type="number" id="work_time" min="1" required>
+
+        <label for="pause_time">pause time : </label>
+        <input type="number" id="pause_time" min="1" required>
+    </form>
     <script src="./script.js"></script>
 </body>
 </html>
