added listener for work time

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </div>
 
     <form id="form">
-        <label for="work_time">work time : </label>
-        <input type="number" id="work_time" min="1" required>
+        <label for="work_input">work time : </label>
+        <input type="number" id="work_input" min="1" required>
 
-        <label for="pause_time">pause time : </label>
-        <input type="number" id="pause_time" min="1" required>
+        <label for="pause_input">pause time : </label>
+        <input type="number" id="pause_input" min="1" required>
     </form>
     <script src="./script.js"></script>
 </body>
