--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     </div>
 
     <form id="form">
-        <label for="work_input">work time : </label>
-        <input type="number" id="work_input" min="1" required>
-
-        <label for="pause_input">pause time : </label>
-        <input type="number" id="pause_input" min="1" required>
+        <div>
+            <input placeholder="work time" type="number" id="work_input" min="1" required>
+        </div>
+        <div>
+            <input placeholder="pause time" type="number" id="pause_input" min="1" required>
+        </div>
     </form>
     <script src="./script.js"></script>
 </body>
