added the long pause input

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div>
             <input placeholder="pause time" type="number" id="pause_input" min="1" required>
         </div>
+        <div>
+            <input placeholder="long pause time" type="number" id="long_pause_input" min="1" required>
+        </div>
     </form>
     <script src="./script.js"></script>
 </body>
