--- a/index.html
+++ b/index.html
@@ -8,32 +8,40 @@
     <title>Pomodoro Timer</title>
 </head>
 <body>
-    <h1>Pomodoro Timer</h1>
-    <div id="display">
-        <h2 id="mode_display">Work</h2>
-    </div>
-    <div id="contener_timer">
-        <h2 id="timer">25:00</h2>
-    </div>
-    <div id="contener_button">
-        <em id="start" class="fa-solid fa-play"></em>
-        <em id="reset" class="fa-solid fa-arrow-rotate-right"></em>
-    </div>
+    <main>
+        <h1>Pomodoro Timer</h1>
+        <div id="display">
+            <h2 id="mode_display">Work</h2>
+        </div>
+        <div id="contener_timer">
+            <h2 id="timer">25:00</h2>
+        </div>
+        <div id="contener_button">
+            <em id="start" class="fa-solid fa-play"></em>
+            <em id="reset" class="fa-solid fa-arrow-rotate-right"></em>
+        </div>
 
-    <form id="form">
-        <div>
-            <label for="work_input">work time (minutes)</label>
-            <input placeholder="25" type="number" id="work_input" min="1" required>
-        </div>
-        <div>
-            <label for="pause_input">pause time (minutes)</label>
-            <input placeholder="5" type="number" id="pause_input" min="1" required>
-        </div>
-        <div>
-            <label for="long_pause_input">long pause time (minutes)</label>
-            <input placeholder="20" type="number" id="long_pause_input" min="1" required>
-        </div>
-    </form>
+        <form id="form">
+            <div>
+                <label for="work_input">work time (minutes)</label>
+                <input placeholder="25" type="number" id="work_input" min="1" required>
+            </div>
+            <div>
+                <label for="pause_input">pause time (minutes)</label>
+                <input placeholder="5" type="number" id="pause_input" min="1" required>
+            </div>
+            <div>
+                <label for="long_pause_input">long pause time (minutes)</label>
+                <input placeholder="20" type="number" id="long_pause_input" min="1" required>
+            </div>
+        </form>
+    </main>
+
+    <footer>
+        <p>&copy Paul Bagot</p>
+        <p>BUT Informatique - 2023</p>
+    </footer>
+    
     <script src="./script.js"></script>
 </body>
 </html>
