--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
     <footer>
         <p>&copy Paul Bagot</p>
-        <p>BUT Informatique - 2023</p>
+        <p>BUT Informatique - 2023 - <a href="https://github.com/PaulBagot">GitHub</a></p>
     </footer>
-    
+
     <script src="./script.js"></script>
 </body>
 </html>
