--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <div id="display">
             <h2 id="mode_display">Work</h2>
         </div>
+        
         <div id="contener_timer">
             <h2 id="timer">25:00</h2>
         </div>
+        
         <div id="contener_button">
             <em id="start" class="fa-solid fa-play"></em>
             <em id="reset" class="fa-solid fa-arrow-rotate-right"></em>
@@ -38,7 +40,7 @@
     </main>
 
     <footer>
-        <p>&copy Paul Bagot</p>
+        <p>Paul Bagot&copy;</p>
         <p>BUT Informatique - 2023 - <a href="https://github.com/PaulBagot">GitHub</a></p>
     </footer>
 
